unpackaged/main/default/objects/Airport__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <label>Continent</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>