unpackaged/main/default/objects/Airport__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>