unpackaged/main/default/objects/Airport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Continent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>